# airin

./: .gitignore  README.md  build.gradle.kts  gradle.properties  mkdocs.yml  settings.gradle.kts
docs/: index.md  (+5 more)
example/android-sample-project/app/: BUILD.bazel  build.gradle
example/android-sample-project/app/src/androidTest/java/com/morfly/airin/sample/: ExampleInstrumentedTest.kt
example/android-sample-project/app/src/main/java/com/morfly/airin/sample/: MainActivity.kt
example/android-sample-project/app/src/main/res/values/: themes.xml
example/android-sample-project/app/src/main/res/values-night/: themes.xml
examples/migration/android-compose-dagger/: .bazelrc  AndroidManifest.xml  BUILD.bazel  README.md  Test.kt  WORKSPACE  build.gradle.kts  settings.gradle.kts
examples/migration/android-compose-dagger/app/: BUILD.bazel  build.gradle.kts
examples/migration/android-compose-dagger/app/src/androidTest/java/org/morfly/airin/sample/: ExampleInstrumentedTest.kt
examples/migration/android-compose-dagger/app/src/main/: AndroidManifest.xml
examples/migration/android-compose-dagger/app/src/main/java/org/morfly/airin/sample/: AirinSampleApplication.kt
examples/migration/android-compose-dagger/artifacts/: BUILD  room-ktx-2.3.0.aar  room-runtime-2.3.0.aar
examples/migration/android-compose-dagger/buildSrc/: build.gradle.kts
examples/migration/android-compose-dagger/buildSrc/src/main/kotlin/: AndroidModuleBuild.kt  Artifacts.kt  Build.kt  KotlinAndroidBuild.kt  OtherBazelFiles.kt  RootBuild.kt  ThirdPartyBuild.kt  Tools.kt  ToolsBuild.kt  Workspace.kt
examples/migration/android-compose-dagger/buildSrc/src/main/kotlin/template/: android_module_build_template.kt  artifacts_build.kt  bazelrc.kt  bazelrc_template.kt  bazelversion.kt  build.kt  kotlin_android_build.kt  root_build.kt  root_build_template.kt  root_workspace.kt  root_workspace_template.kt  third_party_build_template.kt  tools_android_build.kt  tools_android_build_template.kt  tools_java_build.kt  tools_java_build_template.kt  tools_kotlin_build.kt  tools_kotlin_build_template.kt  tools_template.kt  workspace_template.kt
examples/migration/android-compose-dagger/core/: BUILD.bazel  build.gradle.kts
examples/migration/android-compose-dagger/core/src/main/: AndroidManifest.xml
examples/migration/android-compose-dagger/core/src/main/res/values/: strings.xml  themes.xml
examples/migration/android-compose-dagger/core/src/main/res/values-night/: themes.xml
examples/migration/android-compose-dagger/data/api/: BUILD.bazel  build.gradle.kts
examples/migration/android-compose-dagger/data/api/src/main/: AndroidManifest.xml
examples/migration/android-compose-dagger/data/impl/: BUILD.bazel  build.gradle.kts
examples/migration/android-compose-dagger/data/impl/src/main/: AndroidManifest.xml
examples/migration/android-compose-dagger/gradle/wrapper/: gradle-wrapper.properties
examples/migration/android-compose-dagger/image-list/api/: BUILD.bazel  build.gradle.kts
examples/migration/android-compose-dagger/image-list/api/src/main/: AndroidManifest.xml
examples/migration/android-compose-dagger/image-list/impl/: BUILD.bazel  build.gradle.kts
examples/migration/android-compose-dagger/image-list/impl/src/main/: AndroidManifest.xml
examples/migration/android-compose-dagger/profile/api/: BUILD.bazel  build.gradle.kts
examples/migration/android-compose-dagger/profile/api/src/main/: AndroidManifest.xml
examples/migration/android-compose-dagger/profile/impl/: BUILD.bazel  build.gradle.kts
examples/migration/android-compose-dagger/profile/impl/src/main/: AndroidManifest.xml
examples/migration/android-compose-dagger/tools/: BUILD
examples/migration/android-compose-dagger/tools/android/: BUILD
examples/migration/android-compose-dagger/tools/java/: BUILD
examples/migration/android-compose-dagger/tools/kotlin/: BUILD
examples/migration/android-compose-dagger/tools/rules_kotlin_1_5/: README.md
examples/migration/android-multimodule/app/: BUILD.bazel  build.gradle
examples/migration/android-multimodule/app/src/main/: AndroidManifest.xml
examples/migration/android-multimodule/app/src/main/java/org/morfly/sample/: AppComponent.kt  MainActivity.kt  Navigation.kt  SampleApplication.kt  SquareFrameLayout.kt  ViewModelFactory.kt
examples/migration/android-multimodule/app/src/main/res/layout/: activity_main.xml  fragment_details.xml  fragment_feed.xml  item_image.xml
examples/migration/android-multimodule/app/src/main/res/values/: strings.xml  themes.xml
examples/migration/android-multimodule/app/src/main/res/values-night/: themes.xml
examples/migration/android-multimodule/images/: BUILD.bazel  build.gradle
examples/migration/android-multimodule/images/src/main/: AndroidManifest.xml
examples/migration/android-simple-multimodule/app/: BUILD.bazel  build.gradle
examples/migration/android-simple-multimodule/app/src/main/: AndroidManifest.xml
examples/migration/android-simple-multimodule/app/src/main/res/layout/: activity_main.xml
examples/migration/android-simple-multimodule/app/src/main/res/values/: strings.xml  themes.xml
examples/migration/android-simple-multimodule/app/src/main/res/values-night/: themes.xml
examples/migration/android-simple-multimodule/lib/: BUILD.bazel  build.gradle.kts
examples/migration/multimodule-android/app/: BUILD.bazel
examples/migration/multimodule-android/app/src/main/: AndroidManifest.xml
examples/migration/multimodule-android/app/src/main/res/values/: strings.xml
examples/migration/multimodule-android/lib/: BUILD.bazel  build.gradle.kts
samples/simple-android/: .bazelversion  BUILD.bazel  WORKSPACE  build.gradle.kts  gradle.properties  settings.gradle.kts
samples/simple-android/app/: BUILD.bazel  build.gradle.kts
samples/simple-android/app/src/main/: AndroidManifest.xml
samples/simple-android/app/src/main/java/io/morfly/airin/sample/: AirinSampleApplication.kt  AirinSampleNavHost.kt  MainActivity.kt
samples/simple-android/feature-A/: BUILD.bazel  build.gradle.kts
samples/simple-android/feature-B/: BUILD.bazel  build.gradle.kts
(+914 files in other folders)
