package(default_visibility = ["//visibility:public"])

exports_files(["debug.keystore"])

alias(
    name = "java_toolchain",
    actual = "//tools/java:java_toolchain",
)

alias(
    name = "kotlin_toolchain",
    actual = "//tools/kotlin:kotlin_toolchain",
)

alias(
    name = "room_runtime",
    actual = "//third_party:room_runtime",
)

alias(
    name = "room_ktx",
    actual = "//third_party:room_ktx",
)

alias(
    name = "kotlin_reflect",
    actual = "//third_party:kotlin_reflect",
)

alias(
    name = "jetpack_compose_compiler_plugin",
    actual = "//tools/android:jetpack_compose_compiler_plugin",
)

alias(
    name = "androidx_room_room_compiler_library",
    actual = "//tools/android:androidx_room_room_compiler_library",
)

load("@dagger//:workspace_defs.bzl", "dagger_rules")

dagger_rules()