load("@io_bazel_rules_kotlin//kotlin:android.bzl", "kt_android_library")
load("@rules_jvm_external//:defs.bzl", "artifact")

kt_android_library(
    name = "app_lib",
    srcs = glob([
        "src/main/**/*.kt",
        "src/debug/**/*.kt",
    ]),
    custom_package = "io.morfly.airin.sample",
    manifest = "src/main/AndroidManifest.xml",
    plugins = ["//third_party:jetpack_compose_compiler_plugin"],
    resource_files = glob([
        "src/main/res/**",
        "src/debug/res/**",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        artifact("androidx.compose.ui:ui"),
        artifact("androidx.compose.ui:ui-graphics"),
        artifact("androidx.compose.ui:ui-tooling-preview"),
        artifact("androidx.compose.material3:material3"),
        artifact("androidx.activity:activity-compose"),
        artifact("androidx.core:core-ktx"),
        artifact("androidx.lifecycle:lifecycle-runtime-ktx"),
    ],
)

android_binary(
    name = "app",
    dex_shards = 5,
    incremental_dexing = 1,
    manifest = "src/main/AndroidManifest.xml",
    manifest_values = {
        "applicationId": "io.morfly.airin.sample",
        "minSdkVersion": "24",
        "targetSdkVersion": "34",
        "compileSdkVersion": "34",
        "versionCode": "1",
        "versionName": "1.0",
    },
    multidex = "native",
    deps = [":app_lib"],
)
