load("@io_bazel_rules_kotlin//kotlin:android.bzl", "kt_android_library")
load("@rules_jvm_external//:defs.bzl", "artifact")

kt_android_library(
    name = "app",
    srcs = glob(["src/main/**/*.kt"]),
    custom_package = "io.morfly.airin.sample",
    manifest = "src/main/AndroidManifest.xml",
    resource_files = glob(["src/main/res/**"]),
    visibility = ["//visibility:public"],
    deps = [
        "//:hilt-android",
        "//feature-A:feature-A",
        "//feature-B:feature-B",
        artifact("androidx.activity:activity-compose"),
        artifact("androidx.compose.material3:material3"),
        artifact("androidx.compose.ui:ui"),
        artifact("androidx.compose.ui:ui-graphics"),
        artifact("androidx.compose.ui:ui-tooling-preview"),
        artifact("androidx.core:core-ktx"),
        artifact("androidx.lifecycle:lifecycle-runtime-ktx"),
        artifact("androidx.navigation:navigation-compose"),
    ],
    plugins = ["//third_party:jetpack_compose_compiler_plugin"],
)

android_binary(
    name = "app_bin",
    dex_shards = 5,
    incremental_dexing = 1,
    manifest = "src/main/AndroidManifest.xml",
    manifest_values = {
        "applicationId": "io.morfly.airin.sample",
        "minSdkVersion": "24",
        "targetSdkVersion": "34",
        "compileSdkVersion": "34",
        "versionCode": "1",
        "versionName": "1.0",
    },
    multidex = "native",
    deps = [":app"],
)
