load("@io_bazel_rules_kotlin//kotlin:android.bzl", "kt_android_library")

kt_android_library(
    name = "app",
    srcs = glob(["src/main/**/*.kt"]),
    custom_package = "io.morfly.airin.sample",
    manifest = "src/main/AndroidManifest.xml",
    resource_files = glob(["src/main/res/**"]),
    visibility = ["//visibility:public"],
    deps = [
        "//:hilt-android",
        "//feature-A:feature-A",
        "//feature-B:feature-B",
        "@maven//:androidx_activity_activity_compose",
        "@maven//:androidx_compose_material3_material3",
        "@maven//:androidx_compose_ui_ui",
        "@maven//:androidx_compose_ui_ui_graphics",
        "@maven//:androidx_compose_ui_ui_tooling_preview",
        "@maven//:androidx_core_core_ktx",
        "@maven//:androidx_lifecycle_lifecycle_runtime_ktx",
        "@maven//:androidx_navigation_navigation_compose",
    ],
    plugins = ["//third_party:jetpack_compose_compiler_plugin"],
)

android_binary(
    name = "app_bin",
    incremental_dexing = 1,
    manifest = "src/main/AndroidManifest.xml",
    manifest_values = {
        "applicationId": "io.morfly.airin.sample",
        "minSdkVersion": "24",
        "targetSdkVersion": "34",
        "compileSdkVersion": "34",
        "versionCode": "1",
        "versionName": "1.0",
    },
    multidex = "native",
    deps = [":app"],
)
