load("@io_bazel_rules_kotlin//kotlin:android.bzl", "kt_android_library")
load("@rules_jvm_external//:defs.bzl", "artifact")

kt_android_library(
    name = "feature-B",
    srcs = glob(["src/main/**/*.kt"]),
    custom_package = "io.morfly.airin.sample.featureB",
    manifest = "src/main/AndroidManifest.xml",
    resource_files = glob(["src/main/res/**"]),
    visibility = ["//visibility:public"],
    deps = [
        "//:hilt-android",
        artifact("androidx.compose.ui:ui"),
        artifact("androidx.compose.ui:ui-graphics"),
        artifact("androidx.compose.ui:ui-tooling-preview"),
        artifact("androidx.compose.material3:material3"),
        artifact("androidx.navigation:navigation-compose"),
        artifact("androidx.hilt:hilt-navigation-compose"),
    ],
    plugins = ["//third_party:jetpack_compose_compiler_plugin"],
)
