load("@io_bazel_rules_kotlin//kotlin:android.bzl", "kt_android_library")

kt_android_library(
    name = "feature-B",
    srcs = glob(["src/main/**/*.kt"]),
    custom_package = "io.morfly.airin.sample.featureB",
    manifest = "src/main/AndroidManifest.xml",
    resource_files = glob(["src/main/res/**"]),
    visibility = ["//visibility:public"],
    deps = [
        "//:hilt-android",
        "@maven//:androidx_compose_material3_material3",
        "@maven//:androidx_compose_ui_ui",
        "@maven//:androidx_compose_ui_ui_graphics",
        "@maven//:androidx_compose_ui_ui_tooling_preview",
        "@maven//:androidx_hilt_hilt_navigation_compose",
        "@maven//:androidx_navigation_navigation_compose",
    ],
    plugins = ["//third_party:jetpack_compose_compiler_plugin"],
)
