load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_android_library")
load("@rules_android//android:rules.bzl", "android_binary")
load("@rules_jvm_external//:defs.bzl", "artifact")

kt_android_library(
    name = "app",
    srcs = glob(["src/main/java/**/*.kt"]),
    resource_files = glob(["src/main/res/**"]),
    custom_package = "org.morfly.airin.sample",
    manifest = "src/main/AndroidManifest.xml",
    plugins = ["//:jetpack_compose_compiler_plugin"],
    visibility = ["//visibility:public"],
    deps = [
        "//core",
        "//data/impl",
        "//image-list/impl",
        "//:dagger",
        artifact("androidx.compose.runtime:runtime"),
        artifact("androidx.core:core-ktx"),
        artifact("androidx.appcompat:appcompat"),
        artifact("com.google.android.material:material"),
        artifact("androidx.lifecycle:lifecycle-runtime-ktx"),
        artifact("androidx.compose.ui:ui"),
        artifact("androidx.compose.ui:ui-tooling"),
        artifact("androidx.compose.material:material"),
        artifact("androidx.activity:activity-compose"),
        artifact("androidx.navigation:navigation-compose"),
    ],
)

android_binary(
    name = "bin",
    custom_package = "org.morfly.airin.sample",
    manifest = "src/main/AndroidManifest.xml",
    manifest_values = {
        "minSdkVersion": "21",
        "targetSdkVersion": "29",
    },
    multidex = "native",
    incremental_dexing = 1,
    deps = [
        ":app",
        "//:kotlin_reflect",
        artifact("com.google.guava:guava"),
    ],
    visibility = ["//visibility:public"],
)