load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_android_library")
load("@rules_android//android:rules.bzl", "android_binary")
load("@rules_jvm_external//:defs.bzl", "artifact")

kt_android_library(
    name = "app",
    srcs = glob(["src/main/java/**/*.kt"]),
    custom_package = "org.morfly.sample",
    manifest = "src/main/AndroidManifest.xml",
    resource_files = glob(["src/main/res/**"]),
    deps = [
        "//:dagger",
        "//images",
        artifact("org.jetbrains.kotlinx:kotlinx-coroutines-core"),
        artifact("androidx.core:core-ktx"),
        artifact("androidx.lifecycle:lifecycle-viewmodel-ktx"),
        artifact("androidx.lifecycle:lifecycle-runtime-ktx"),
        artifact("androidx.fragment:fragment-ktx"),
        artifact("androidx.appcompat:appcompat"),
        artifact("com.google.android.material:material"),
        artifact("androidx.constraintlayout:constraintlayout"),
        artifact("io.coil-kt:coil"),
    ],
    visibility = ["//visibility:public"],
)

android_binary(
    name = "bin",
    custom_package = "org.morfly.sample",
    manifest = "src/main/AndroidManifest.xml",
    manifest_values = {
        "minSdkVersion": "21",
        "targetSdkVersion": "29",
        "versionCode": "1",
        "versionName": "1.0",
    },
    debug_key = "//:debug.keystore",
    multidex = "native",
    incremental_dexing = 1,
    deps = [":app"],
    visibility = ["//visibility:public"],
)