load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_android_library")
load("@rules_jvm_external//:defs.bzl", "artifact")

kt_android_library(
    name = "app",
    srcs = glob([
        "src/main/java/**/*.kt",
        "src/main/kotlin/**/*.kt",
    ]),
    custom_package = "com.morfly.airin.sample",
    manifest = "src/main/AndroidManifest.xml",
    deps = [
        "//lib",
        artifact("org.jetbrains.kotlin:kotlin-stdlib"),
        artifact("androidx.core:core-ktx"),
        artifact("androidx.appcompat:appcompat"),
        artifact("com.google.android.material:material"),
        artifact("androidx.constraintlayout:constraintlayout"),
    ],
    visibility = ["//visibility:public"],
    resource_files = glob(["src/main/res/**"]),
)

android_binary(
    name = "app_bin",
    custom_package = "com.morfly.airin.sample",
    manifest = "src/main/AndroidManifest.xml",
    manifest_values = {
        "minSdkVersion": "21",
        "targetSdkVersion": "30",
    },
    resource_files = glob(["src/main/res/**"]),
    deps = [":app"],
    visibility = ["//visibility:public"],
)
