load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_library")
load("@rules_jvm_external//:defs.bzl", "artifact")

kt_jvm_library(
    name = "lib",
    deps = [artifact("org.jetbrains.kotlin:kotlin-stdlib:1.5.10")],
    srcs = glob([
        "src/main/java/**/*.kt",
        "src/main/kotlin/**/*.kt",
    ]),
    visibility = ["//visibility:public"],
)
